improve responsive design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>The Code Blog</h1>
       </div>
 
-      <nav>
+      <nav class="navigation">
         <ul>
           <li class="tab"><i class="fa fa-home"></i><span>Home</span></li>
           <li class="tab"><i class="fa fa-book"></i><span>About Me</span></li>
