--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>
       Code Blog
     </title>
-    <link href="normalize/normalize.css" rel="stylesheet">
+    <link href="vendor/normalize/normalize.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="styles/style.css" rel="stylesheet">
